z-index problem fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -221,12 +221,12 @@ p.intro-title{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 0;
 }
 
 .particles{
     position: absolute;
-    z-index: 200;
+    z-index: -1;
     overflow: hidden;
 }
 
